--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     
     <title>Maze</title>
 
-    <link rel="stylesheet" href="styles/maze.css">
-    <link rel="stylesheet" href="styles/buttons.css">
+    <link rel="stylesheet" href="/styles/maze.css">
+    <link rel="stylesheet" href="/styles/buttons.css">
     <link rel="stylesheet" href="styles/menus.css">
 </head>
 
